Fix wrap

--- a/estilos/Estilo_general.css
+++ b/estilos/Estilo_general.css
@@ -185,6 +185,7 @@ figcaption {
         border-radius: 6px;
         background-color: #d4dfe7;
         font-weight: bold;
+        white-space: nowrap;
 }
 
 #encabezado {
